bug fixing sidenav z-index

--- a/client/static/stylesheets/portfolio.css
+++ b/client/static/stylesheets/portfolio.css
@@ -69,6 +69,9 @@ nav{
   background-color: transparent !important;
   transition: background-color 0.5s ease;
 }
+.side-nav{
+  z-index: 11;
+}
 .noboxshadow{
   box-shadow: none !important;
 }
